<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.stops.StopsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tvGridActionsH"
                        style="@style/grid_header_actions"
                        android:text="@string/grid_actions_column" />

                    <TextView
                        android:id="@+id/tvGridDateH"
                        style="@style/grid_header"
                        android:layout_width="125dp"
                        android:text="@string/grid_date_column" />

                    <TextView
                        android:id="@+id/tvGridScheduleH"
                        style="@style/grid_header"
                        android:layout_width="80dp"
                        android:text="@string/grid_schedule_column" />

                    <TextView
                        android:id="@+id/tvGridOperatorH"
                        style="@style/grid_header"
                        android:layout_width="200dp"
                        android:text="@string/grid_operator_column" />

                    <TextView
                        android:id="@+id/tvGridStartStopH"
                        style="@style/grid_header"
                        android:layout_width="100dp"
                        android:text="@string/grid_start_stop_column" />

                    <TextView
                        android:id="@+id/tvGridEndStopH"
                        style="@style/grid_header"
                        android:layout_width="100dp"
                        android:text="@string/grid_end_stop_column" />

                    <TextView
                        android:id="@+id/tvGridProductH"
                        style="@style/grid_header"
                        android:layout_width="200dp"
                        android:text="@string/grid_product_column" />

                    <TextView
                        android:id="@+id/tvGridCodeH"
                        style="@style/grid_header"
                        android:layout_width="200dp"
                        android:text="@string/grid_code_column" />

                    <TextView
                        android:id="@+id/tvGridPackingH"
                        style="@style/grid_header"
                        android:layout_width="200dp"
                        android:text="@string/grid_packing_column" />

                    <TextView
                        android:id="@+id/tvGridQuantityH"
                        style="@style/grid_header"
                        android:layout_width="100dp"
                        android:text="@string/grid_quantity_column" />

                    <TextView
                        android:id="@+id/tvGridMetersH"
                        style="@style/grid_header"
                        android:layout_width="200dp"
                        android:text="@string/grid_meters_column" />

                    <TextView
                        android:id="@+id/tvGridCommentH"
                        style="@style/grid_header"
                        android:layout_width="250dp"
                        android:text="@string/grid_comment_column" />
                </TableRow>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvStopsGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/stop_row" />
            </TableLayout>
        </HorizontalScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:focusable="true"
            android:tint="@android:color/white"
            android:contentDescription="@string/fab_content_description"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp" />
    </RelativeLayout>
</layout>