<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.create.CreateFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvCreate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <!--<com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <com.rosemaryapp.amazingspinner.AmazingSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_code"
                        android:entries="@array/codes"/>
                </com.google.android.material.textfield.TextInputLayout>-->
                <TextView
                    android:id="@+id/tvCode"
                    style="@style/label_form"
                    android:text="@string/label_code"/>
                <Spinner
                    android:id="@+id/spinnerCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/tvStopType"
                    style="@style/label_form"
                    android:text="@string/label_stop_type"/>
                <EditText
                    android:id="@+id/etStopType"
                    style="@style/label_form"
                    android:background="@drawable/spinner_outline"
                    tools:text="Programado"
                    android:enabled="false"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/tvOperator"
                    style="@style/label_form"
                    android:text="@string/label_operator"/>
                <Spinner
                    android:id="@+id/spinnerOperator"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_outline"/>
                <TextView
                    android:id="@+id/tvProduct"
                    style="@style/label_form"
                    android:text="@string/label_product"/>
                <Spinner
                    android:id="@+id/spinnerProduct"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_outline"/>
                <TextView
                    android:id="@+id/tvColor"
                    style="@style/label_form"
                    android:text="@string/label_color"/>
                <Spinner
                    android:id="@+id/spinnerColor"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_outline"/>
                <TextView
                    android:id="@+id/tvConversion"
                    style="@style/label_form"
                    android:text="@string/label_conversion"/>
                <Spinner
                    android:id="@+id/spinnerConversion"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_outline"/>
                <TextView
                    android:id="@+id/tvQuantity"
                    style="@style/label_form"
                    android:text="@string/label_quantity"/>
                <EditText
                    android:id="@+id/etQuantity"
                    style="@style/label_form"
                    android:background="@drawable/spinner_outline"
                    tools:text="2"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/tvMeters"
                    style="@style/label_form"
                    android:text="@string/label_meters"/>
                <EditText
                    android:id="@+id/etMeters"
                    style="@style/label_form"
                    android:background="@drawable/spinner_outline"
                    tools:text="100"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/tvComments"
                    style="@style/label_form"
                    android:text="@string/label_comments"/>

                <EditText
                    android:id="@+id/etComments"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_outline"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    tools:text="Comentario de Prueba"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/tvStartDateTimeStop"
                    style="@style/label_form"
                    android:text="@string/label_start_datetime_stop" />
                <TextView
                    android:id="@+id/tvConfirmStartDateTimeStop"
                    style="@style/label_form"
                    tools:text="29, Noviembre 2021 08:00:00"/>
                <TextView
                    android:id="@+id/tvEndDateTimeStop"
                    style="@style/label_form"
                    android:text="@string/label_end_datetime_stop"/>
                <TextView
                    android:id="@+id/tvConfirmEndDateTimeStop"
                    style="@style/label_form"
                    tools:text="29, Noviembre 2021 08:00:00"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cancel"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/round_bg_dark"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_next"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/round_bg_dark"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>